<resources>
    <string name="app_name">MovieDatabase</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="title">Shang-Chi and the Legend of the Ten Rings</string>
    <string name="release_date">2021 - 07 - 28</string>
    <string name="release">Release Date :</string>
    <string name="popularity">Popularity :</string>
    <string name="pop">2035.964</string>
    <string name="vote_average">Vote Average :</string>
    <string name="back">Back</string>
    <string name="vote_count">Vote Count :</string>
    <string name="Overview">Overview</string>
    <string name="overview">Lorem Ipsum Dolor sit Amet</string>
</resources>